packages/app/src/design/app.scss
@import 'sanitize.css/sanitize';
@import 'sanitize.css/assets';
@import 'sanitize.css/typography';
@import './default-theme';
@import './themes';

* {
  max-width: 100%;
  font-family: var(--font-main);
}

:root {
  line-height: 1.5;
  color: var(--text);
  background: var(--bg);

  --font-main: 'Space Grotesk', sans-serif;
  --font-mono: 'Space Mono', monospace;
  --border-width: 2px;

  /* Title */
  --size-title: 1.6rem;
  --weight-title: 700;

  /* Field label */
  --size-field-label: 0.9rem;
  --weight-field-label: 500;

  /* Paragraph */
  --size-paragraph: 1rem;
  --weight-paragraph: 500;

  /* Details */
  --size-details: 0.85rem;
  --weight-details: 700;

  /* Big Figure */
  --size-big-figure: 2.4rem;
  --weight-big-figure: 500;

  /* Big button */
  --size-big-button: 1.1rem;
  --weight-big-button: 700;
}

:root.gd7t {
  background-image: url('/gd7t-bg.jpg');
}

.primary {
  --bg: var(--primary-bg);
  --text: var(--primary-text);
  --link: var(--primary-link);
  --border: var(--primary-border);
  --shadow: var(--primary-shadow);
  --ring: var(--primary-ring);
  --hover-bg: var(--primary-hover-bg);
  --hover-text: var(--primary-hover-text);
  --hover-border: var(--primary-hover-border);
  --disabled-bg: var(--primary-disabled-bg);
  --disabled-text: var(--primary-disabled-text);
  --disabled-border: var(--primary-disabled-border);
}

.success {
  --bg: var(--success-bg);
  --text: var(--success-text);
  --link: var(--success-link);
  --border: var(--success-border);
  --shadow: var(--success-shadow);
  --disabled-bg: var(--success-disabled-bg);
  --disabled-text: var(--success-disabled-text);
  --disabled-border: var(--success-disabled-border);
}

.danger {
  --bg: var(--danger-bg);
  --text: var(--danger-text);
  --link: var(--danger-link);
  --border: var(--danger-border);
  --shadow: var(--danger-shadow);
  --disabled-bg: var(--danger-disabled-bg);
  --disabled-text: var(--danger-disabled-text);
  --disabled-border: var(--danger-disabled-border);
}

.warning {
  --bg: var(--warning-bg);
  --text: var(--warning-text);
  --link: var(--warning-link);
  --border: var(--warning-border);
  --shadow: var(--warning-shadow);
  --disabled-bg: var(--warning-disabled-bg);
  --disabled-text: var(--warning-disabled-text);
  --disabled-border: var(--warning-disabled-border);
}

.muted {
  --bg: var(--muted-bg);
  --text: var(--muted-text);
  --link: var(--muted-link);
  --border: var(--muted-border);

  // Not sure about the side-effect here
  color: var(--text);
}

.icon {
  flex-shrink: 0;
  vertical-align: bottom;

  h1 &,
  h2 &,
  h3 & {
    width: 1em;
    height: 1em;
  }
}

[hidden] {
  display: none !important;
}

html {
  color-scheme: light dark;
}

.typo-title,
h1,
h2 {
  font-size: var(--size-title);
  line-height: 0.95;
}

h1 {
  font-size: 1.8em;
}

h2 {
  font-size: 1.4em;
}

.typo-field-label,
dt {
  font-size: var(--size-field-label);
  font-weight: var(--weight-field-label);
  text-transform: uppercase;
  letter-spacing: 0.15em;

  /* font-feature-settings: "ss04" 1; */
}

.typo-big-figure {
  font-size: var(--size-big-figure);
  font-weight: var(--weight-big-figure);
}

.typo-paragraph,
p {
  font-size: var(--size-paragraph);
  font-weight: var(--weight-paragraph);
}

.typo-details {
  font-size: var(--size-details);
  font-weight: var(--weight-details);
}

.typo-big-button {
  font-size: var(--size-big-button);
  font-weight: var(--weight-big-button);
}

a {
  color: unset;
  text-decoration: none;
}

dd > a:not([class^='button']),
p > a:not([class^='button']),
a.in-body {
  color: var(--link);
  text-decoration: underline;
  text-decoration-thickness: 0.125em;
  text-underline-offset: 0.5ch;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol,
body {
  padding: 0;
  margin: 0;
}

[data-user-html] > {
  p {
    margin-bottom: 1em;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-top: 1em;
    margin-bottom: 0.5em;
  }
}

ul,
ol {
  padding-left: 1em;
}

ul.nobullet {
  padding-left: 0;
  list-style: none;
}

ins {
  color: var(--success-text);
  text-decoration: none;
  background-color: var(--success-bg);
}

del {
  color: var(--danger-text);
  background-color: var(--danger-bg);
}

hr {
  width: 80%;
  max-width: 1000px;
  border: var(--border-block) solid var(--muted-bg);
  border-radius: 1000px;
}

code {
  font-family: var(--font-mono);
  font-weight: bold;
  color: currentcolor;
}

code.hljs {
  border-radius: var(--radius-block);
}

a.user-mention {
  padding: 0.25rem;
  color: var(--primary-text) !important;
  text-decoration: none !important;
  background-color: var(--primary-bg) !important;
  border-radius: var(--radius-inline);
}

a.user-mention:hover,
a.user-mention:focus-visible {
  color: var(--primary-hover-text) !important;
  background-color: var(--primary-hover-bg) !important;
}

